--- a/04-todolist/src/style/_reset.scss
+++ b/04-todolist/src/style/_reset.scss
@@ -1,32 +1,54 @@
 /* 스타일 초기화 */
-h1, h2, h3, h4, h5, h6{
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font: inherit;
   font-size: 1em;
   margin: 0;
 }
 
-a{
+a {
   color: inherit;
   text-decoration: none;
 }
 
-ul, ol{
+ul,
+ol {
   list-style: none;
   padding-left: 0;
   padding-inline-start: 0;
   margin: 0;
 }
 
-fieldset{
+fieldset {
   border: 0;
   margin: 0;
-  padding: 0
+  padding: 0;
 }
 
-p, figure{
+p,
+figure {
   margin: 0;
 }
 
-input, textarea, select, option, button{
+input,
+textarea,
+select,
+option,
+button {
   font: inherit;
+  border: 0;
+  padding: 0;
+}
+
+input[type="checkbox"] {
+  appearance: none;
+  cursor: pointer;
+}
+button {
+  background-color: transparent;
+  cursor: pointer;
 }
