--- a/04-todolist/src/style/index.scss
+++ b/04-todolist/src/style/index.scss
@@ -3,6 +3,10 @@
 @import "./variables.scss";
 @import "./Layout.scss";
 @import "./button.scss";
+@import "./Status.scss";
+@import "./Todo.scss";
+@import "./icon.scss";
+@import "./input.scss";
 
 body {
   margin: 0;
