--- a/04-todolist/src/style/_variables.scss
+++ b/04-todolist/src/style/_variables.scss
@@ -1,5 +1,5 @@
 $primaryColor: #0760fb;
-$secondaryColor: #bd76ff;
+$secondaryColor: #e2ebfa;
 $errorColor: #ef0000;
 $successColor: #008900;
 $warningColor: #eb6e32;
