--- a/04-todolist/src/style/index.scss
+++ b/04-todolist/src/style/index.scss
@@ -1,5 +1,6 @@
 @import "./reset.scss";
 @import "./App.scss";
+@import "./bootstrap.scss";
 @import "./variables.scss";
 @import "./Layout.scss";
 @import "./button.scss";
@@ -7,6 +8,7 @@
 @import "./Todo.scss";
 @import "./icon.scss";
 @import "./input.scss";
+@import "./Modal.scss";
 
 body {
   margin: 0;
