--- a/04-todolist/src/style/_Layout.scss
+++ b/04-todolist/src/style/_Layout.scss
@@ -1,10 +1,18 @@
+.app__title {
+  @include font($fz: 19px);
+  margin-bottom: 20px;
+}
 .Layout {
+  box-sizing: border-box;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  width: 320px;
+  justify-content: flex-start;
+  min-width: 320px;
   height: 640px;
+  padding-top: 90px;
   background-color: $gray50;
+  position: relative;
+  overflow: auto;
 
   .logo__container {
     width: 110px;
@@ -34,6 +42,21 @@
 
     &__filter {
       @include font($fw: 600, $fz: 14px, $color: $deactive);
+
+      &:first-child {
+        padding-right: 16px;
+        border-right: 1px solid $gray200;
+      }
+
+      &.active {
+        transition: all 0.5s ease;
+        color: $primaryColor;
+
+        .status__container {
+          transition: all 0.5s ease;
+          background-color: $primaryColor;
+        }
+      }
     }
   }
   .divider {
