--- a/04-todolist/src/style/_Todo.scss
+++ b/04-todolist/src/style/_Todo.scss
@@ -8,6 +8,7 @@
     padding: 16px 20px;
     border-radius: $border-radius;
     background-color: $white;
+    box-shadow: 0px 4px 12px 0px rgba(0, 5, 14, 0.05);
 
     li {
       display: flex;
@@ -28,5 +29,10 @@
     display: flex;
     justify-content: space-between;
     @include font($color: $date, $fz: 11px, $fw: 400);
+  }
+  &.completed {
+    .todo__title {
+      text-decoration: line-through;
+    }
   }
 }
