--- a/04-todolist/src/style/_button.scss
+++ b/04-todolist/src/style/_button.scss
@@ -1,8 +1,21 @@
 .button {
+  &__container {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    gap: 8px;
+
+    [class^="button"] {
+      flex: 1;
+    }
+  }
   &__primary {
     @include font($color: $label, $fz: 16px, $fw: 700);
-    @include button($bg: $background, $color: $label);
-    margin-bottom: 32px;
+    @include button($bg: $primaryColor, $color: $label);
+  }
+  &__secondary {
+    @include font($color: $label, $fz: 16px, $fw: 700);
+    @include button($bg: $secondaryColor, $color: $primaryColor);
   }
   &__archive {
     .icon {
