--- a/04-todolist/src/style/_input.scss
+++ b/04-todolist/src/style/_input.scss
@@ -1,23 +1,34 @@
-input {
-  &[type="checkbox"] {
+.checkbox {
+  position: relative;
+  width: 20px;
+  height: 20px;
+
+  input {
+    position: absolute;
+    opacity: 0;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    cursor: pointer;
+  }
+
+  label {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: $white;
     border: 2px solid $gray200;
-    width: 20px;
-    height: 20px;
     border-radius: 50%;
+    cursor: pointer;
+  }
 
-    &:checked {
-      background-color: $primaryColor;
-      border: 0;
-
-      &::after {
-        content: "";
-        display: block;
-        background-image: url(../../public/icon/icon-check.svg);
-        background-repeat: no-repeat;
-        background-position: 50% 50%;
-        width: 20px;
-        height: 20px;
-      }
-    }
+  input[type="checkbox"]:checked + label {
+    background-color: $primaryColor;
+    border: 0;
+    background-image: url(../../public/icon/icon-check.svg);
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
   }
 }
