feat: 추가 클래스 작업

--- a/04-todolist/src/style/_Modal.scss
+++ b/04-todolist/src/style/_Modal.scss
@@ -50,6 +50,15 @@
     }
   }
 }
+.time {
+  &__container {
+  }
+  &__startperiod {
+    padding: 8px;
+    border: 1px solid $gray200;
+    border-radius: 6px;
+  }
+}
 
 @keyframes slideUp {
   from {
