--- a/04-todolist/src/style/index.css
+++ b/04-todolist/src/style/index.css
@@ -374,6 +374,12 @@ button {
   animation: slideDown 0.3s ease-out forwards;
 }
 
+.time__startperiod {
+  padding: 8px;
+  border: 1px solid #d9d9d9;
+  border-radius: 6px;
+}
+
 @keyframes slideUp {
   from {
     transform: translateY(100%);
